--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@wdio/local-runner": "^9.11.0",
     "@wdio/mocha-framework": "^9.11.0",
-    "@wdio/spec-reporter": "^9.11.0"
+    "@wdio/spec-reporter": "^9.11.0",
+    "log4js": "^6.9.1"
   },
   "dependencies": {
     "chromedriver": "^134.0.2"
